--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <main>
-      <div id="main">
+      <!-- <div id="main">
         <button class="card" onclick="createUI('Curiosity')">
           Curiosity
         </button>
@@ -18,7 +18,7 @@
           Opportunity
         </button>
         <button class="card" onclick="createUI('Spirit')">Spirit</button>
-      </div>
+      </div> -->
       <div id="root" style="display: none">
         <h1>Loading...</h1>
       </div>
