--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,15 +10,15 @@
 
   <body>
     <main>
-      <!-- <div id="main">
-        <button class="card" onclick="createUI('Curiosity')">
+      <div id="main">
+        <!-- <button class="card" onclick="createUI('Curiosity')">
           Curiosity
         </button>
         <button class="card" onclick="createUI('Opportunity')">
           Opportunity
         </button>
-        <button class="card" onclick="createUI('Spirit')">Spirit</button>
-      </div> -->
+        <button class="card" onclick="createUI('Spirit')">Spirit</button> -->
+      </div>
       <div id="root" style="display: none">
         <h1>Loading...</h1>
       </div>
