--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./assets/stylesheets/index.css" />
-    <title>Document</title>
+    <title>Rovers Project</title>
+    <h3>Rovers Project</h3>
   </head>
 
   <body>
@@ -25,4 +26,5 @@
     </main>
   </body>
   <script src="/client.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.8.2/immutable.min.js"></script>
 </html>
