adding responsiveness to initial menu

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./assets/stylesheets/index.css" />
     <title>Rovers Project</title>
-    <h3>Rovers Project</h3>
   </head>
 
   <body>
@@ -21,7 +20,7 @@
         <button class="card" onclick="createUI('Spirit')">Spirit</button> -->
       </div>
       <div id="root" style="display: none">
-        <h1>Loading...</h1>
+        <h1>Loading... ⏲</h1>
       </div>
     </main>
   </body>
