--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./assets/stylesheets/index.css" />
-    <title>Rovers Project</title>
+    <h1 id="initialmessage">
+      Pick one to start 🚀
+    </h1>
   </head>
-
   <body>
     <main>
       <div id="main">
